--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,14 @@
 @font-face {
+  font-family: 'Poppins-Light';
+  src: url('../assets/fonts/Poppins-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
+}
+
+@font-face {
   font-family: 'Poppins-Medium';
   src: url('../assets/fonts/Poppins-Medium.ttf') format('truetype');
 }
